<resources>

    <string name="app_name">Passaport Reader</string>

    <string name="input_passport_number">Passport number</string>
    <string name="input_expiration_date">Expiration date</string>
    <string name="input_date_of_birth">Date of birth</string>

    <string name="info_loading">Reading data…</string>
    <string name="info_scan_passport">Please fill details and place your phone on top of the passport. Following information is required to decode encrypted passport data.</string>
    <string name="error_input">Please provide details to read passport</string>
    <string name="error_read">Failed to read passport</string>
    <string name="info_scan_nfc">Please place the passport on the back of the phone</string>

    <string name="result_first_name">First name</string>
    <string name="result_last_name">Last name</string>
    <string name="result_gender">Gender</string>
    <string name="result_state">Country</string>
    <string name="result_nationality">Nationality</string>
    <string name="result_adress">Adress</string>
    <string name="result_phone">Phone</string>
    <string name="result_birth_place">Birth Place</string>

</resources>
